Fixed level 3 nav  tabs spacing

--- a/skins_adm/bootstrap/rsc/css/style.less
+++ b/skins_adm/bootstrap/rsc/css/style.less
@@ -1198,6 +1198,8 @@ div.level3 nav .nav > li {
 	&.active a:focus {
 		background-color: #337ab7;
 	}
+	margin-right: 3px;
+	margin-bottom: 3px;
 }
 .user_header_content {
 	div.level3 {
@@ -1206,6 +1208,10 @@ div.level3 nav .nav > li {
 	.user_title .login {
 		margin-left: 10px;
 	}
+}
+
+div.level3 nav .nav > li + li {
+	margin-left: 0px;
 }
 
 // Footer
